tests/fixtures/diagnostics/error-interpolated.ascii.stderr
Error: "Invalid widget configuration"
  ,
2 | @error "Invalid #{$name} configuration";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  '
  error-interpolated.scss 2:1  root stylesheet
